Fragment using recyclerview

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="login" />
     <string name="Login">Login</string>
     <string name="favorite">Favorite</string>
+    <string name="add">add</string>
 </resources>
