--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,13 @@
     <string name="name">Name</string>
     <string name="email_id">Email id</string>
     <string name="search">search</string>
-    <string name="login" />
+    <string name="login">login</string>
     <string name="Login">Login</string>
     <string name="favorite">Favorite</string>
     <string name="add">add</string>
+    <string name="email">email</string>
+    <string name="company">company</string>
+    <string name="followerUrl">followerUrl</string>
+
+
 </resources>
